# Reconstruct-the-Jumbled-PDF-

./: README.md  TECHNICAL_DOCUMENTATION.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py  config.py  logging_config.py  reorder.py
