[project]
name = "pdf-reorder"
version = "1.0.0"
description = "PDF Page Reordering using Google Document AI and Gemini"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.3",
    "google-cloud-documentai==2.10.0",
    "google-cloud-storage>=3.4.1",
    "google-generativeai>=0.8.5",
    "pypdf>=6.3.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.38.0",
]
